GS-13424 added java 9 --illegal-access=permit to java options